Add initial music video creation step functionality

--- a/ui/styles.css
+++ b/ui/styles.css
@@ -35,6 +35,12 @@
     }
 }
 
+.video-output {
+    .icon-buttons {
+        display: none;
+    }
+}
+
 #footer {
     display: flex;
     flex-direction: column;
